--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "css-mediaquery": "^0.1.2",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
     "yup": "^0.32.11"
   },
@@ -37,8 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/user-event": "^14.4.3",
-    "jest": "^27.5.1"
+    "babel-jest": "^29.4.2",
+    "jest": "^27.5.1",
+    "mq-polyfill": "^1.1.8",
+    "react-test-renderer": "^18.2.0"
   },
   "main": "index.js",
   "author": "",
