--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
+    "react-svg": "^16.1.2",
     "yup": "^0.32.11"
   },
   "scripts": {
