Complete CSS styling for GeneralInformation

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "cropperjs": "^1.5.13",
     "css-mediaquery": "^0.1.2",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
