--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "cv-project",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.9",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "@react-pdf/renderer": "^3.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "cropperjs": "^1.5.13",
-    "css-mediaquery": "^0.1.2",
     "formik": "^2.2.9",
-    "prop-types": "^15.8.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2",
-    "react-scripts": "^5.0.1",
-    "react-svg": "^16.1.2",
-    "yup": "^0.32.11"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,18 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/user-event": "^14.4.3",
-    "babel-jest": "^29.4.2",
-    "jest": "^27.5.1",
-    "mq-polyfill": "^1.1.8",
-    "react-test-renderer": "^18.2.0"
-  },
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
