Update build to make it compatible with GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://elmoscaviador.github.io/cv-app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cropperjs": "^1.5.13",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
@@ -22,10 +24,12 @@
     "yup": "^1.0.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
